--- a/services/users/project/api/templates/index.html
+++ b/services/users/project/api/templates/index.html
@@ -1,55 +1,97 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>Flask on Docker</title>
+    <title>CodingApp</title>
     <!-- meta -->
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- styles -->
-    <link
-      href="//cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css"
-      rel="stylesheet"
-    >
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     {% block css %}{% endblock %}
-  </head>
-  <body>
-    <div class="container">
-      <div class="column is-one-third">
-        <br>
-        <h1 class="title">All Users</h1>
-        <hr><br>
-        <form action="/" method="POST">
-          <div class="field">
-            <input
-              name="username" class="input"
-              type="text" placeholder="Enter a username" required>
-          </div>
-          <div class="field">
-            <input
-              name="email" class="input"
-              type="email" placeholder="Enter an email address" required>
-          </div>
-          <input
-            type="submit" class="button is-primary is-fullwidth"
-            value="Submit">
-        </form>
-        <br>
-        <hr>
-          {% if users %}
-            <ol>
-              {% for user in users %}
-                <li>{{user.username}}</li>
-              {% endfor %}
-            </ol>
-          {% else %}
-            <p>No users!</p>
-          {% endif %}
+</head>
+
+<body>
+
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+        <header class="mdl-layout__header">
+            <div class="mdl-layout__header-row">
+                <!-- Title -->
+                <span class="mdl-layout-title">CodingApp</span>
+            </div>
+            <!-- Tabs -->
+            <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
+                <a href="#scroll-tab-1" class="mdl-layout__tab is-active">Sign Up</a>
+                <a href="#scroll-tab-2" class="mdl-layout__tab">Users</a>
+            </div>
+        </header>
+        <div class="mdl-layout__drawer">
+            <span class="mdl-layout-title">CodingApp</span>
         </div>
-      </div>
+        <main class="mdl-layout__content">
+            <section class="mdl-layout__tab-panel is-active" id="scroll-tab-1">
+                <div class="page-content">
+                    <div class="mdl-grid">
+                        <div class="mdl-cell mdl-cell--4-col mdl-cell--4-offset">
+                            <div class="demo-card-square mdl-card mdl-shadow--2dp">
+                                <div class="mdl-card__title mdl-card--expand">
+                                    <h2 class="mdl-card__title-text">Sign Up</h2>
+                                </div>
+                                <div class="mdl-card__supporting-text">
+                                    <form action="/" method="POST">
+                                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                                            <input class="mdl-textfield__input" type="text" id="username">
+                                            <label class="mdl-textfield__label" for="username">Username</label>
+                                        </div>
+                                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                                            <input class="mdl-textfield__input" type="email" id="email">
+                                            <label class="mdl-textfield__label" for="email">Email</label>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="mdl-card__actions mdl-card--border">
+                                    <button type="submit"
+                                        class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                                        Register
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="mdl-layout__tab-panel" id="scroll-tab-2">
+                <div class="page-content">
+                    <div class="mdl-grid">
+                        <div class="mdl-cell mdl-cell--4-col mdl-cell--4-offset">
+                            <div class="demo-card-square mdl-card mdl-shadow--2dp">
+                                <div class="mdl-card__title mdl-card--expand">
+                                    <h2 class="mdl-card__title-text">All users</h2>
+                                </div>
+                                <div class="mdl-card__supporting-text">
+                                        {% if users %}
+                                        <ol>
+                                          {% for user in users %}
+                                            <li>{{user.username}}</li>
+                                          {% endfor %}
+                                        </ol>
+                                      {% else %}
+                                        <p>No users!</p>
+                                      {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
-    </script>
     {% block js %}{% endblock %}
-  </body>
+</body>
+
 </html>
