--- a/services/users/project/api/templates/index.html
+++ b/services/users/project/api/templates/index.html
@@ -9,11 +9,24 @@
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- styles -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-orange.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     {% block css %}{% endblock %}
+    <style>
+        .font-sc {
+            font-family: 'Source Code Pro', monospace !important;
+            font-weight: 600;
+        }
+
+        body {
+            font-family: 'Source Code Pro', monospace !important;
+            font-weight: 600;
+            font-size: 16px; 
+        }
+    </style>
 </head>
 
 <body>
@@ -22,7 +35,7 @@
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
                 <!-- Title -->
-                <span class="mdl-layout-title">CodingApp</span>
+                <span class="mdl-layout-title font-sc">CodingApp</span>
             </div>
             <!-- Tabs -->
             <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
@@ -31,7 +44,7 @@
             </div>
         </header>
         <div class="mdl-layout__drawer">
-            <span class="mdl-layout-title">CodingApp</span>
+            <span class="mdl-layout-title font-sc">CodingApp</span>
         </div>
         <main class="mdl-layout__content">
             <section class="mdl-layout__tab-panel is-active" id="scroll-tab-1">
@@ -40,25 +53,25 @@
                         <div class="mdl-cell mdl-cell--4-col mdl-cell--4-offset">
                             <div class="demo-card-square mdl-card mdl-shadow--2dp">
                                 <div class="mdl-card__title mdl-card--expand">
-                                    <h2 class="mdl-card__title-text">Sign Up</h2>
+                                    <h2 class="mdl-card__title-text font-sc">Sign Up</h2>
                                 </div>
                                 <div class="mdl-card__supporting-text">
                                     <form action="/" method="POST">
                                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                            <input class="mdl-textfield__input" type="text" id="username">
+                                            <input class="mdl-textfield__input" type="text" name="username" required> 
                                             <label class="mdl-textfield__label" for="username">Username</label>
                                         </div>
                                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                            <input class="mdl-textfield__input" type="email" id="email">
+                                            <input class="mdl-textfield__input" type="email" name="email" required>
                                             <label class="mdl-textfield__label" for="email">Email</label>
                                         </div>
                                     </form>
                                 </div>
-                                <div class="mdl-card__actions mdl-card--border">
-                                    <button type="submit"
-                                        class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                                <div class="mdl-card__actions mdl-card--border ">
+                                    <input type="submit"
+                                        class="mdl-button font-sc mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                                         Register
-                                    </button>
+                                    </input>
                                 </div>
                             </div>
                         </div>
@@ -71,7 +84,7 @@
                         <div class="mdl-cell mdl-cell--4-col mdl-cell--4-offset">
                             <div class="demo-card-square mdl-card mdl-shadow--2dp">
                                 <div class="mdl-card__title mdl-card--expand">
-                                    <h2 class="mdl-card__title-text">All users</h2>
+                                    <h2 class="mdl-card__title-text">All Users</h2>
                                 </div>
                                 <div class="mdl-card__supporting-text">
                                         {% if users %}
