--- a/services/users/project/api/templates/index.html
+++ b/services/users/project/api/templates/index.html
@@ -30,7 +30,6 @@
 </head>
 
 <body>
-
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
@@ -56,22 +55,22 @@
                                     <h2 class="mdl-card__title-text font-sc">Sign Up</h2>
                                 </div>
                                 <div class="mdl-card__supporting-text">
-                                    <form action="/" method="POST">
+                                    <form action="http://localhost/lol" method="POST">
                                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                            <input class="mdl-textfield__input" type="text" name="username" required> 
+                                            <input class="mdl-textfield__input" type="text" name="username"> 
                                             <label class="mdl-textfield__label" for="username">Username</label>
                                         </div>
                                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                            <input class="mdl-textfield__input" type="email" name="email" required>
+                                            <input class="mdl-textfield__input" type="email" name="email">
                                             <label class="mdl-textfield__label" for="email">Email</label>
-                                        </div>
-                                    </form>
+                                        </div>                                
                                 </div>
                                 <div class="mdl-card__actions mdl-card--border ">
-                                    <input type="submit"
+                                    <button type="submit"
                                         class="mdl-button font-sc mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                                         Register
-                                    </input>
+                                    </button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
